[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bullet_Red.gd" type="Script" id=1]
[ext_resource path="res://characters/red/red bullet/rbul 1.png" type="Texture" id=2]
[ext_resource path="res://characters/red/red bullet/rbul 2.png" type="Texture" id=3]
[ext_resource path="res://characters/red/red bullet/rbul 3.png" type="Texture" id=4]
[ext_resource path="res://music/bubble pop.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]

[node name="Bullet_Red" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.347948, 11.1343 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.56, 1 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.307358, -2.26498e-006 )
scale = Vector2( 0.600436, 0.600436 )

[node name="Shot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Bullet_Red_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
